--- a/src/app/scss/style.scss
+++ b/src/app/scss/style.scss
@@ -1,5 +1,9 @@
 // body for style
-body      {
-    margin: 0;
-    box-sizing: border-box;
+body {
+  margin: 0;
+  box-sizing: border-box;
+}
+
+h1 {
+  color: red;
 }
