--- a/src/app/templates/layouts/default.html
+++ b/src/app/templates/layouts/default.html
@@ -5,13 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./app/css/style.min.css" />
-    <title>Gulp, happy</title>
+    <title>{{title}}</title>
   </head>
   <body>
-    <h1>Main title !</h1>    
-    <h1>Gulp, happy !</h1>
-    
-    
-    <footer>I'm footer for this page!</footer>
+    {{> title}}
+    {{> body}} 
+    {{> footer}}
   </body>
 </html>
