--- a/src/app/scss/style.scss
+++ b/src/app/scss/style.scss
@@ -1,9 +1,81 @@
-// body for style
-body {
-  margin: 0;
+:root {
   box-sizing: border-box;
 }
 
-h1 {
-  color: blue;
+*,
+::before,
+::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+body,
+html {
+  height: 100%;
+  font-family: "Roboto", sans-serif;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.header {
+  width: 100%;
+  height: 60px;
+  position: relative;
+  background-color: #cf4647;
+}
+
+.menu {
+  height: inherit;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  .list-item--border {
+    width: 130px;
+    border: 2px solid #fff;
+    padding: 5px;
+  }
+
+  .link-item img {
+    width: 100%;
+    max-width: 50px;
+    display: block;
+  }
+}
+
+.text {
+  font-size: 20px;
+  color: #FFF;
+  text-transform: uppercase;
+}
+
+.main {
+  flex: 1 1 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 15px;
+
+  .box-image {
+    padding: 15px;
+    border-radius: 20px;
+    box-shadow: 1px 1px 10px #cf4647;
+
+    .image {
+      width: 100%;
+      object-fit: cover;
+      display: block;
+    }
+  }
+}
+
+.footer {
+  width: 100%;
+  height: 60px;
+  background-color: #20232a;
 }
