--- a/src/app/templates/layouts/default.html
+++ b/src/app/templates/layouts/default.html
@@ -1,15 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./app/css/style.min.css" />
-    <title>{{title}}</title>
-  </head>
+  {{> head}}
   <body>
-    {{> title}}
-    {{> body}} 
-    {{> footer}}
+    <div class="wrapper">{{> header}} {{> main}} {{> footer}}</div>
+    <script src="./app/js/main.min.js"></script>
   </body>
 </html>
