rename main file

--- a/src/app/templates/layouts/default.html
+++ b/src/app/templates/layouts/default.html
@@ -2,7 +2,10 @@
 <html lang="en">
   {{> head}}
   <body>
-    <div class="wrapper">{{> header}} {{> main}} {{> footer}}</div>
+    <div class="wrapper">{{> header}} {{> main}} {{> footer}}
+      
+    </div>
+
     <script src="./app/js/main.min.js"></script>
   </body>
 </html>
